Allow using a flexible version of the helptext popover that does not have a fixed width.
(This indicates that we have almost stretched functionality of the helptext popover to its limits: we should seriously consider splitting it into a helptext popover or content view and general popover view.)

--- a/core/app/assets/stylesheets/widgets/popups/helptext_popover.css.less
+++ b/core/app/assets/stylesheets/widgets/popups/helptext_popover.css.less
@@ -10,6 +10,10 @@
   background: #fff;
   width: 200px;
 
+  &.help-text-container-flexible {
+    width: auto;
+  }
+
   font-size: @baseFontSize;
 
   border: 1px solid #a6a6a6;
